--- a/page.html
+++ b/page.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YP2RV5K79Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YP2RV5K79Z');
+</script>
     <title> My Second Page</title>
   </head>
   <body>
