--- a/home.html
+++ b/home.html
@@ -13,5 +13,7 @@
   </head>
   <body>
     Google Analytics
+    <a href="https://instagram.com/">Instagram</a>
+    <a href="https://chatgpt.com/">ChatGPT</a>
   </body>
 </html>
