--- a/home.html
+++ b/home.html
@@ -15,5 +15,7 @@
     Google Analytics
     <a href="https://instagram.com/">Instagram</a>
     <a href="https://chatgpt.com/">ChatGPT</a>
+    <br/>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/iemAO3dbzfY?si=QR6H9b-z6b3xlYIV&enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
