--- a/basic.html
+++ b/basic.html
@@ -11,7 +11,7 @@ window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments)};
 gtag("js", new Date());
 
-gtag("config", "評估編號");
+gtag("config", "G-PDQB7RGDTD");
 </script>
 </head>
 <body>
