--- a/landing-page.html
+++ b/landing-page.html
@@ -11,7 +11,7 @@ window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments)};
 gtag("js", new Date());
 
-gtag("config", "評估編號");
+gtag("config", "G-PDQB7RGDTD");
 // 以下和電子商務有關的追蹤程式
 // 追蹤：【兔兔草】產品展示次數
 gtag("event", "view_item_list", {
